ロゴアイコン修正

--- a/works.html
+++ b/works.html
@@ -347,10 +347,10 @@
 
           <div class="work-img img-portrait">
             <div class="img-container">
-              <a href="works/twoTone.html">
+              <a href="works/twotone.html">
                 <img src="img/works/two_tone.jpg" alt="ツートン">
               </a>
-              <a href="works/twoTone.html">
+              <a href="works/twotone.html">
                 <div class="img-mask"></div>
               </a>
             </div>
