twitterリンク修正

--- a/works.html
+++ b/works.html
@@ -73,7 +73,7 @@
           <div class="row header-sp-bottom-container">
             <div class="col header-sp-top header-sp-bottom">
               <a href="./index.html" ontouchstart="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="383.583" height="595.162" viewBox="0 0 101.49 157.47">
+                <svg xmlns="//www.w3.org/2000/svg" width="383.583" height="595.162" viewBox="0 0 101.49 157.47">
                   <g fill="#4b4b4b">
                     <path class="home-svg"
                       d="M92.743 34.556h-.004L59.58 3.472A12.81 12.81 0 0050.803 0a12.824 12.824 0 00-8.78 3.472L8.867 34.556a12.834 12.834 0 00-4.056 9.365v52.974a12.813 12.813 0 003.76 9.077 12.814 12.814 0 009.077 3.76h66.314a12.826 12.826 0 009.077-3.76 12.824 12.824 0 003.76-9.077V43.92c0-3.55-1.471-6.939-4.056-9.365zm-6.166 62.34a2.581 2.581 0 01-.768 1.847 2.575 2.575 0 01-1.847.767h-21.8V76.799H39.448V99.51h-21.8a2.59 2.59 0 01-1.85-.765 2.57 2.57 0 01-.765-1.85V43.921a2.6 2.6 0 01.825-1.907l33.158-31.086a2.577 2.577 0 011.787-.707 2.585 2.585 0 011.787.706L85.749 42.01v.002c.529.495.828 1.186.828 1.908v52.974z" />
@@ -88,7 +88,7 @@
             </div>
             <div class="col header-sp-works header-sp-bottom">
               <a href="#" ontouchstart="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="417.195" height="595.18" viewBox="0 0 110.383 157.475">
+                <svg xmlns="//www.w3.org/2000/svg" width="417.195" height="595.18" viewBox="0 0 110.383 157.475">
                   <g fill="#ffe000">
                     <path class="arm-svg"
                       d="M109.686 74.019c-.381-1.287-1.144-3.623-2.526-7.813C102.686 52.49 78.156 4.388 78.156 4.388c-1.382-3-4.526-4.717-7.81-4.335L40.007 3.77c-2.051.236-3.814 1.473-4.814 3.282 0 0-3.52 5.765-5 9.337-1.474 3.572-.618 7.144 2.382 9.24 3 2.092 17.287 5.666 20.004 4.475 4.526-2.002 6.86-11.047 6.86-11.047l6.856-1.19s2.86 9.854 2.382 18.524c-.619 10.716.076 15.182 1.556 24.42-1.877.646-3.845-1.721-7.937-5.558-12.7-11.906-28.612-7.233-35.675 3.19-1.856-1.572-8.78-2.394-16.716-3.19v54.787C23.4 108.454 29.43 99.225 29.43 99.225c7.387 1.474 18.778.48 28.196-1.112 17.4-2.943 28.957-9.664 28.957-9.664l19.15-6.477c3.284-1.142 5.045-4.668 3.953-7.953z" />
@@ -103,7 +103,7 @@
             </div>
             <div class="col header-sp-member header-sp-bottom">
               <a href="./member.html" ontouchstart="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="549.766" height="595.162" viewBox="0 0 145.459 157.47"
+                <svg xmlns="//www.w3.org/2000/svg" width="549.766" height="595.162" viewBox="0 0 145.459 157.47"
                   version="1.1" id="svg8">
                   <g transform="translate(-512.485 -97.049)" class="person-svg">
                     <g transform="matrix(.26458 0 0 .26458 36.588 34.987)" opacity="1" fill="#4b4b4b" fill-opacity="1"
@@ -144,7 +144,7 @@
             </div>
             <div class="col header-sp-contact header-sp-bottom">
               <a href="./contact.html" ontouchstart="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="528.755" height="537.499" viewBox="0 0 139.9 142.213">
+                <svg xmlns="//www.w3.org/2000/svg" width="528.755" height="537.499" viewBox="0 0 139.9 142.213">
                   <g fill="#4b4b4b">
                     <path class="mail-svg"
                       d="M119.974 11.22a13.89 13.89 0 00-2.876-6.09 11.974 11.974 0 00-.946-1.048A13.897 13.897 0 00106.305 0H33.75a13.916 13.916 0 00-9.846 4.082 12.23 12.23 0 00-.946 1.048 13.724 13.724 0 00-2.864 6.09c-.18.88-.272 1.79-.272 2.709v50.956c0 1.955.415 3.834 1.154 5.531a13.651 13.651 0 002.927 4.315c.312.311.622.597.96.881 2.41 1.996 5.52 3.2 8.887 3.2h72.554c3.369 0 6.493-1.204 8.888-3.212a13.938 13.938 0 003.9-5.183v-.013a13.781 13.781 0 001.14-5.518V13.929c0-.92-.09-1.829-.26-2.709zm-91.03-2.099a6.728 6.728 0 014.807-1.995h72.554a6.702 6.702 0 015.417 2.708L73.695 42.976a5.52 5.52 0 01-3.667 1.373 5.57 5.57 0 01-3.666-1.373L28.349 9.82a5.14 5.14 0 01.595-.699zM26.95 64.885V17.194L54.469 41.2 26.962 65.182c-.014-.09-.014-.193-.014-.297zm79.356 6.8H33.75a6.709 6.709 0 01-3.368-.892l29.02-25.29 2.71 2.357a12.08 12.08 0 007.915 2.968c2.825 0 5.662-.998 7.93-2.968l2.707-2.357 29.01 25.29a6.718 6.718 0 01-3.37.893zm6.802-6.8c0 .104 0 .206-.013.297L85.589 41.215l27.518-24.009z" />
@@ -167,7 +167,7 @@
 
   <main>
     <div class="top">
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 181.279 143.294"
+      <svg xmlns="//www.w3.org/2000/svg" xmlns:xlink="//www.w3.org/1999/xlink" viewBox="0 0 181.279 143.294"
         class="background-works">
         <defs>
           <linearGradient xlink:href="#a" id="b" x1="90.116" y1="184.88" x2="266.941" y2="105.505"
