--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
 
             <div class="karasu">
-                <svg xmlns="http://www.w3.org/2000/svg"viewBox="0 0 600 600">
+                <svg xmlns="//www.w3.org/2000/svg"viewBox="0 0 600 600">
                     <path opacity=".99" d="M200.029 200.029h200.029v200.029H200.029z" />
                     <path opacity=".99" fill="#fff" d="M200.029 400.058h200.029v200.029H200.029z" />
                     <path opacity=".99" d="M400.058 1.212h200.029v200.029H400.058z" />
