ロゴアイコン修正

--- a/member.html
+++ b/member.html
@@ -496,7 +496,7 @@
           <div class="member-img profile-left">
             <div class="img-container">
               <a href="//twitter.com/c_lock_row"></a>
-              <img src="img/member-icon/karasu.png" alt="C-lock-row">
+              <img src="img/karasu.png" alt="C-lock-row">
               <div class="img-mask"><a href="//twitter.com/c_lock_row">@c_lock_row</a></div>
             </div>
           </div>
