所要時間追加

--- a/works/zentaisen.html
+++ b/works/zentaisen.html
@@ -269,6 +269,8 @@
                                         </p>
                                     ＜制作者コメント＞
                                     <p>クォークの６種を出したら難しくなると思ったがそんな事もなかった</p>
+                                    ＜所要時間＞
+                                    <p>10分</p>
                                 </div>
                             </div>
                         </div>
@@ -297,6 +299,8 @@
                                         <br>
                                         ※アステロイドの綴りには astroid と asteroid の2種類があるようです。<br>
                                         </p>
+                                        ＜所要時間＞
+                                        <p>15分</p>
                                 </div>
                             </div>
                         </div>
@@ -328,6 +332,8 @@
                                     ＜制作者コメント＞
                                     <p>大学生になってから急に漢字が書けなくなったように感じます...
                                         </p>
+                                    ＜所要時間＞
+                                    <p>21分</p>
                                 </div>
                             </div>
                         </div>
@@ -360,6 +366,8 @@
                                     ＜制作者コメント＞
                                     <p>何の言語かを特定する部分で根気がいるかもしれません。
                                         </p>
+                                    ＜所要時間＞
+                                    <p>13分</p>
                                 </div>
                             </div>
                         </div>
@@ -401,6 +409,8 @@
                                     ＜制作者コメント＞
                                     <p>二乃派です
                                     </p>
+                                    ＜所要時間＞
+                                    <p>10分</p>
                                 </div>
                             </div>
                         </div>
@@ -424,6 +434,8 @@
                                     ＜制作者コメント＞
                                     <p>47個で3141590Gになる組み合わせ、プログラムで解かれたのか手作業で解かれたのか気になりますね
                                     </p>
+                                    ＜所要時間＞
+                                    <p>52分</p>
                                 </div>
                             </div>
                         </div>
@@ -461,6 +473,8 @@
                                     <p>いろいろな難しさが凝縮された問題だったかと思います。<br>
                                         制作では「傘、花、玉」の一つ前の配置が一意であることを確かめるのに一番苦労しました。
                                     </p>
+                                    ＜所要時間＞
+                                    <p>2時間33分</p>
                                 </div>
                             </div>
                         </div>
@@ -487,6 +501,8 @@
                                     <p>学名を反転しただけの問題です。この全体戦の中で癒し枠ですね。<br>
                                         他の人がヤバすぎて比較的多くの癒し枠を作ってしまっている。
                                     </p>
+                                    ＜所要時間＞
+                                    <p>7分</p>
                                 </div>
                             </div>
                         </div>
@@ -513,6 +529,8 @@
                                     ＜制作者コメント＞
                                     <p>AWAKEのこの試合、結構話題になったので覚えていた人もいるはず…？
                                     </p>
+                                    ＜所要時間＞
+                                    <p>14分</p>
                                 </div>
                             </div>
                         </div>
@@ -554,6 +572,8 @@
                                     ＜制作者コメント＞
                                     <p>開闢はロマンでありガチカード
                                     </p>
+                                    ＜所要時間＞
+                                    <p>39分</p>
                                 </div>
                             </div>
                         </div>
@@ -590,6 +610,8 @@
                                     <p>原案では１７の部分を隠していたのですが却下されました。<br>
                                         豚辞書では一意なんだけどなぁ()
                                     </p>
+                                    ＜所要時間＞
+                                    <p>4時間28分</p>
                                 </div>
                             </div>
                         </div>
@@ -620,6 +642,8 @@
                                         面白いゲームなので皆さんもぜひ機会があればやってみてください。<br>
                                         この問題で私のことは嫌いになっても、ポーカーのことは嫌いにならないでください。
                                     </p>
+                                    ＜所要時間＞
+                                    <p>14分</p>
                                 </div>
                             </div>
                         </div>
@@ -653,6 +677,8 @@
                                         という予想のことです。<br>
                                         主張は単純なのにいまだに未解決問題のようです。
                                     </p>
+                                    ＜所要時間＞
+                                    <p>8分</p>
                                 </div>
                             </div>
                         </div>
@@ -699,6 +725,8 @@
                                     ＜制作者コメント＞
                                     <p>みくにゃん可愛い
                                     </p>
+                                    ＜所要時間＞
+                                    <p>31分</p>
                                 </div>
                             </div>
                         </div>
@@ -726,6 +754,8 @@
                                         JanからDecを全体とした線分を4:7に分ける部分にMayがあるのもたまたまです。<br>
                                         縮尺はいじわるです。
                                     </p>
+                                    ＜所要時間＞
+                                    <p>15時間30分</p>
                                 </div>
                             </div>
                         </div>
@@ -771,6 +801,8 @@
                                         <br>
                                         URLの"yWpYKt"の部分はランダムだったのでアルファベットの頭文字だけで確定するように<a href="https://twitter.com/pgpg_1ove">先輩</a>にURLガチャしてもらいました()<br>
                                     </p>
+                                    ＜所要時間＞
+                                    <p>19分</p>
                                 </div>
                             </div>
                         </div>
@@ -863,6 +895,8 @@
                                     <p>展開図を使う別の問題を考えていたのですが、実装が難航していたところこの問題を思いつき作りました。<br>
                                         「11といえば展開図」←ほんまかって感じですよね、全体戦の問題を作るのは初めてだったので難易度調整迷いましたが、集合知の力を信じました。<br>
                                     </p>
+                                    ＜所要時間＞
+                                    <p>25分</p>
                                 </div>
                             </div>
                         </div>
@@ -891,6 +925,8 @@
                                     ＜制作者コメント＞
                                     <p>作りたいというだけで生まれた音を使った謎です。最初は和音で弾いてたのですが、さすがに無理ということで難易度落としてこの形です。許して。
                                     </p>
+                                    ＜所要時間＞
+                                    <p>8時間16分</p>
                                 </div>
                             </div>
                         </div>
@@ -928,6 +964,8 @@
                                         require "prime"<br>
                                         <span style="overflow-wrap: break-word;word-wrap: break-word">Prime.prime_division(402254197733765270790758915710957395787548010785487325719081041369329444961937481937530780753432581419239990319685216328509)</span>
                                     </p>
+                                    ＜所要時間＞
+                                    <p>16分</p>
                                 </div>
                             </div>
                         </div>
@@ -943,7 +981,7 @@
                             <div class="details">
                                 <h3>２０問目<br class="br-title">（制作：firsecthir）</h3>
                                 <div class="kaisetsu-p">
-                                    <p>KOREHASAIGONOMONDAIの一部が太文字になっています。太字の部分を並び替えると「shindanmaker」となり、診断メーカーのURLの末尾を970585にして検索すると「君はけろけろけろっぴになれるか」という診断が出てきます。<br>
+                                    <p>KOREHASAIGONOMONDAIの一部が太文字になっています。太字の部分を並び替えると「shindanmaker」となり、診断メーカーのURLの末尾を970585にして検索すると「<a href="https://shindanmaker.com/970585">君はけろけろけろっぴになれるか</a>」という診断が出てきます。<br>
                                         この診断は、全部で6個のリストからそれぞれ1個ずつランダムに排出された文字を連結して出てきます。各リストは49個の同じハズレ文字列と各リストごとに1個ずつ割り当てられたアタリ文字列からなります。<br>
                                         とにかく診断を回して文字列を集め、適切に区切ることで各リストの中身を特定していきます。すると各リストで固有のアタリ文字列、1つ目から順に「しろ」「くろ」「のさ」「いとと」「かいと」「うしろ」を特定できて、答えは「<b>しろくろのさいと</b>」となります。<br>
                                     </p>
@@ -952,6 +990,8 @@
                                         この問題は全体戦でよく使われるテーマ「集合知」を意識しました。<br>
                                         最終問題にふさわしい1問になっていれば幸いです。
                                     </p>
+                                    ＜所要時間＞
+                                    <p>n時間</p>
                                 </div>
                             </div>
                         </div>
