--- a/works.html
+++ b/works.html
@@ -367,35 +367,46 @@
 
       <div id="jutaku-container">
 
-        <div class="jutaku-wrap">
-          <div class="jutaku-year">2015</div>
-          <div class="jutaku-client"></div>
-          <div class="jutaku-title">アニメ『すべてがFになる』謎制作</div>
+<div class="jutaku-wrap">
+          <div class="jutaku-year">2019</div>
+          <div class="jutaku-title">『紙謎』応援謎キャンペーン謎制作<br>
+            <span>(ディライトワークス インディーズさま)</span></div>
         </div>
 
-        <div class="jutaku-wrap">
-          <div class="jutaku-year">2016</div>
-          <div class="jutaku-title">『潜水艦ゴライアスからの生還』謎制作<br>
-          <span>(タンブルウィードさま)</span></div>
-        </div>
+       
 
+<hr class="gray-line">
 
-        <div class="jutaku-wrap">
-          <div class="jutaku-year">2016</div>
-          <div class="jutaku-title">『謎解きカフェ ミス・モノクローム』謎制作</div>
-        </div>
-
-        <div class="jutaku-wrap">
+<div class="jutaku-wrap">
           <div class="jutaku-year">2019</div>
           <div class="jutaku-title">『LOST A CONDITION』謎制作<br>
             <span>(タンブルウィードさま)</span>
           </div>
         </div>
 
+       
+
+<hr class="gray-line">
+
         <div class="jutaku-wrap">
-          <div class="jutaku-year">2019</div>
-          <div class="jutaku-title">『紙謎』応援謎キャンペーン謎制作<br>
-            <span>(ディライトワークス インディーズさま)</span></div>
+          <div class="jutaku-year">2016</div>
+          <div class="jutaku-title">『謎解きカフェ ミス・モノクローム』謎制作</div>
+        </div>
+
+<hr class="gray-line">
+
+       <div class="jutaku-wrap">
+          <div class="jutaku-year">2016</div>
+          <div class="jutaku-title">『潜水艦ゴライアスからの生還』謎制作<br>
+          <span>(タンブルウィードさま)</span></div>
+        </div>
+
+<hr class="gray-line">
+
+       <div class="jutaku-wrap">
+          <div class="jutaku-year">2015</div>
+          <div class="jutaku-client"></div>
+          <div class="jutaku-title">アニメ『すべてがFになる』謎制作</div>
         </div>
 
       </div>
